# TutorTree

./: .env  .env.example  .gitignore  README.md  README_BENCHMARK.md  adaptive_benchmark_500.jsonl  analyze_results.py  benchmark_100.jsonl  data_pipeline.py  fidelity_study.py  human_eval.py  human_rating_key.csv  human_rating_task.csv  index.html  mass_experiment_results.csv  mass_experiment_results_heuristic.csv  multimodel_adaptive_results.csv  package-lock.json  package.json  pyproject.toml  requirements.txt  run_experiment.py  simulator_fidelity_results.jsonl  supabase_human_evaluations.sql
src/: App.tsx  styles.css  supabaseClient.ts
src/data/: humanRatingTask.ts
src/pmcts/: __init__.py  env.py  evaluate.py  mcts.py  models.py  reward.py  sim_student.py
tests/: test_data_pipeline.py  test_evaluate.py  test_fidelity_study.py  test_human_eval.py  test_live_integration.py  test_mcts.py  test_models.py  test_reward.py  test_run_experiment.py  test_sim_student_prompt.py
